--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="./src/index.css">
+    <title>Run Crafted</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="min-h-screen w-full bg-slate-500 font-sans" id="body">
+    <div class="flex flex-col items-center min-h-screen w-full" id="content"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
