--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Run Crafted</title>
   </head>
   <body class="min-h-screen w-full bg-slate-500 font-sans" id="body">
-    <div class="flex flex-col items-center min-h-screen w-full" id="content"></div>
+    <div class="flex flex-col items-center min-h-screen w-full" id="content">
+     
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
