--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="flex flex-col items-center min-h-screen w-full" id="content">
 
     </div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/frontend/main.jsx"></script>
   </body>
 </html>
