--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./src/index.css">
     <title>Run Crafted</title>
   </head>
-  <body class="min-h-screen w-full bg-slate-500 font-sans" id="body">
-    <div class="flex flex-col items-center min-h-screen w-full" id="content">
+  <body class="h-screen w-full bg-slate-500 font-sans" id="body">
+    <div class="flex flex-col items-center h-screen w-full" id="content">
 
     </div>
-    <script type="module" src="/src/frontend/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
